fix typos in the project report

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -241,7 +241,7 @@ Space Sharing (90-10) & 344 & 263 & 344 & 263 & \textbf{298.5} & \textbf{344} \\
 
 \section{Implementation}
 
-We want to improve the memory and compute utilization of GPUS in a cluster by aggressively packing multiple workloads that utilize different types of cores on the same GPU concurrently. We use the NVIDIA Multi-Process Service (MPS) \cite{mps} to improve the GPU utilization and speed up training jobs. MPS is a feature that allows multiple CUDA processes to share a single GPU context. Each process receives some subset of the available connections to that GPU. MPS allows overlapping of kernel and memcopy operations from different processes on the GPU to achieve maximum utilization. \cite{mps_tutorial}
+We want to improve the memory and compute utilization of GPUs in a cluster by aggressively packing multiple workloads that utilize different types of cores on the same GPU concurrently. We use the NVIDIA Multi-Process Service (MPS) \cite{mps} to improve the GPU utilization and speed up training jobs. MPS is a feature that allows multiple CUDA processes to share a single GPU context. Each process receives some subset of the available connections to that GPU. MPS allows overlapping of kernel and memcopy operations from different processes on the GPU to achieve maximum utilization. \cite{mps_tutorial}
 
 To get a deeper insight into the utilization of different on-chip compute cores, we use the NVIDIA Visual Profiler (nvprof) to profile common DL & HPC workloads (Table \ref{common-workloads}). We present a profiler output parser that is built around nvprof which computes the utilization of different types of cores in a workload. First, for each CUDA kernel in a workload, we use the nvprof metric collection mode to query the metrics that indicate the fine-grained utilization of different types of compute cores: “Tensor-Precision Function Unit Utilization” for FP16 usage, “Single-Precision Function Unit Utilization“ for FP32 usage, and “Double-Precision Function Unit Utilization” for FP64 usage. Then, we use the nvprof summary mode to obtain the time fraction each CUDA kernel takes during the span of the whole workload. Finally, we merge the output from the two modes to produce a utilization percentage for different compute cores by taking the time-weighted average of utilizations of all CUDA kernels. We discuss our results in the evaluation section.
 
