fix more typos & formatting issues. fml

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -96,7 +96,7 @@ Modern GPU architectures exhibit high versatility and specialization by includin
 
 Recent years have seen an increase in high performance computing (HPC) and deep learning training (DLT) workloads. These workloads include both traditional HPC applications, like computational chemistry, financial risk modeling, and computer-aided engineering, as well as emerging applications, like machine learning, and deep learning, which widely cover tasks like image and voice recognition, language modeling and translation, recommendation systems, etc.
 
-The foundation of the increasing popularity of these compute-intensive workloads is the emergence of specialized, domain-specific hardware accelerators, such as GPUs, TPUs \cite{tpu}, and FPGAs. Specifically, GPUs are designed to allow the faster computation of certain workloads by embracing specialized optimizations. These hardware accelerators are powerful yet expensive: A GPU virtual machine (VM) costs around 10x that of a regular VM. With different groups in the same organization running compute-intensive workloads, it is beneficial to consolidate GPU resources into a GPU cluster shared by multiple tenants. As a result of the high cost and the need for fair and efficient scheduling and resource allocation, it is crucial for cluster scheduling frameworks to ensure the proper utilization of hardware accelerators in the cluster.
+The foundation of the increasing popularity of these compute-intensive workloads is the emergence of specialized, domain-specific hardware accelerators, such as GPUs, TPUs \cite{tpu}, and FPGAs. Specifically, GPUs are designed to allow the faster computation of certain workloads by embracing specialized optimizations. These hardware accelerators are powerful yet expensive: A GPU virtual machine (VM) costs around 10x more than that of a regular VM. With different groups in the same organization running compute-intensive workloads, it is beneficial to consolidate GPU resources into a GPU cluster shared by multiple tenants. As a result of the high cost and the need for fair and efficient scheduling and resource allocation, it is crucial for cluster scheduling frameworks to ensure the proper utilization of hardware accelerators in the cluster.
 
 One issue with fully utilizing GPU clusters is that the current model for estimating the utilization of GPUs is not precise enough: current GPU utilization monitoring tools do not provide a fine-grained estimation of the utilization of computing cores in a GPU. Modern GPU architectures exhibit high versatility by including a myriad combination of cores (FP16, FP32, FP64, etc.) designed for different workloads. However, almost all GPU utilization monitoring tools are wrapped around the NVIDIA System Management Interface (nvidia-smi) \cite{nvidia-smi}, which is developed on top of the NVIDIA Management Library (NVML) \cite{nvml}. The GPU utilization metric provided by NVML is a very coarse, upper-bound estimation of the utilization: it is defined as the “percent of the time over the past sample period during which one or more kernels was executing on the GPU”. As a result, at a certain point in time, as long as one kernel is being executed on the GPU, NVML considers the GPU to be fully utilized, while a lot of the cores may be sitting idle and are not being properly utilized. Some of the most recent works \cite{wavelet} report similar findings, in which occupancy rate replaces volatile GPU utility as the metric for monitoring utilization.
 
@@ -105,7 +105,7 @@ One issue with fully utilizing GPU clusters is that the current model for estima
 \label{common-workloads}
 \vskip 0.15in
 \begin{center}
-\begin{tabular*}{\textwidth}{c @{\extracolsep{\fill}} c{2cm}c{2cm}cccc}
+\begin{tabular*}{\textwidth}{@{\extracolsep{\fill}}|ccc|c|ccc|}
 \toprule
 Task & Model & Dataset & NVML Util & FP16 Util & FP32 Util & FP64 Util \\
 \midrule
