--- a/latex/main.tex
+++ b/latex/main.tex
@@ -29,12 +29,12 @@
 
 % The \mlsystitle you define below is probably too long as a header.
 % Therefore, a short form for the running title is supplied here:
-\mlsystitlerunning{CS/ECE/ME/EP 759 Final Project: Cautiously Aggressive GPU Space Sharing in Multi-Tenant Clusters}
+\mlsystitlerunning{CS/ECE/ME/EP 759 Final Project: Cautiously Aggressive GPU Space Sharing to Improve Resource Utilization and Job Efficiency}
 
 \begin{document}
 
 \twocolumn[
-\mlsystitle{Cautiously Aggressive GPU Space Sharing in Multi-Tenant Clusters}
+\mlsystitle{Cautiously Aggressive GPU Space Sharing to Improve Resource Utilization and Job Efficiency}
 
 % It is OKAY to include author information, even for blind
 % submissions: the style file will automatically remove it for you
