--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CS/ECE/ME/EP 759 (High Performance Computing for Engineering Applications) Course Project: Cautiously Aggressive GPU Space Sharing in Multi-Tenant Clusters\n"
+    "# CS/ECE/ME/EP 759 (High Performance Computing for Engineering Applications) Course Project: Cautiously Aggressive GPU Space Sharing to Improve Resource Utilization and Job Efficiency\n"
    ]
   },
   {
